fixed bottom fixed navbar overlap issue

--- a/style.css
+++ b/style.css
@@ -33,3 +33,9 @@ body{
 	max-width: 25%;
 
 }
+
+.minHeight{
+
+
+	height: 50px:;
+}
